--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   text-align: center;
   padding: 50px;
   margin-top: 100px;
-  background-color: yellow;
+  background-color: rgb(241, 241, 48);
 }
 .description {
   list-style-type: none;
